<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.arggos.merecomiendas.ui.home.Menup"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.arggos.merecomiendas.ui.perfil.perfil"
        android:label="@string/menu_perfil"
        />

    <fragment
        android:id="@+id/nav_mensajes"
        android:name="com.arggos.merecomiendas.ui.mensajes.mensajes"
        android:label="@string/menu_mensajes"
      />

    <fragment
        android:id="@+id/nav_anuncios"
        android:name="com.arggos.merecomiendas.ui.anuncios.anuncios"
        android:label="@string/menu_anuncios"
       />
    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.arggos.merecomiendas.ui.favoritos.favoritos"
        android:label="@string/menu_favoritos"
        />
    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.arggos.merecomiendas.ui.pagos.pagos"
        android:label="@string/menu_pagos"
       />
    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.arggos.merecomiendas.ui.servicios.servicios"
        android:label="@string/menu_servicios"
        />
    <fragment
        android:id="@+id/nav_cotizaciones"
        android:name="com.arggos.merecomiendas.ui.cotizaciones.cotizaciones"
        android:label="@string/menu_cotizaciones"
        />
    <fragment
        android:id="@+id/nav_aclaraciones"
        android:name="com.arggos.merecomiendas.ui.aclaraciones.aclaraciones"
        android:label="@string/menu_aclaraciones"
       />
    <fragment
        android:id="@+id/nav_ayuda"
        android:name="com.arggos.merecomiendas.ui.ayuda.ayuda"
        android:label="@string/menu_ayuda"
       />
    <fragment
        android:id="@+id/nav_config"
        android:name="com.arggos.merecomiendas.ui.config.config"
        android:label="@string/menu_config"
        />
</navigation>